// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextFieldComponent base should return a TextFieldComponent object 1`] = `
.c0 {
  background-color: hsl(0,0%,100%);
  color: inherit;
  border: 1px solid hsl(0,0%,25%);
  border-radius: 4px;
  border-radius: 4px;
  outline: 0;
  width: 100%;
  padding: 1rem;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c0[disabled] {
  opacity: 0.3;
}

.c0[disabled] ~ * {
  color: rgba(0,0,0,0.3);
}

.c0:focus {
  border-color: hsl(323.3,84.6%,28%);
  box-shadow: 0 0 0 1px hsl(323.3,84.6%,28%);
}

.c0:focus + label {
  color: hsl(323.3,84.6%,28%);
}

.c0::-webkit-input-placeholder {
  color: hsl(0,0%,75%);
}

.c0::-moz-placeholder {
  color: hsl(0,0%,75%);
}

.c0:-ms-input-placeholder {
  color: hsl(0,0%,75%);
}

.c0::placeholder {
  color: hsl(0,0%,75%);
}

<input
  className="c0"
  readOnly={false}
  tabIndex="0"
  type="text"
/>
`;

exports[`TextFieldComponent base should return a large TextFieldComponent object 1`] = `
.c0 {
  background-color: hsl(0,0%,100%);
  color: inherit;
  border: 1px solid hsl(0,0%,25%);
  border-radius: 8px;
  border-radius: 8px;
  outline: 0;
  width: 100%;
  padding: 1rem;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 1.2rem;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c0[disabled] {
  opacity: 0.3;
}

.c0[disabled] ~ * {
  color: rgba(0,0,0,0.3);
}

.c0:focus {
  border-color: hsl(323.3,84.6%,28%);
  box-shadow: 0 0 0 1px hsl(323.3,84.6%,28%);
}

.c0:focus + label {
  color: hsl(323.3,84.6%,28%);
}

.c0::-webkit-input-placeholder {
  color: hsl(0,0%,75%);
}

.c0::-moz-placeholder {
  color: hsl(0,0%,75%);
}

.c0:-ms-input-placeholder {
  color: hsl(0,0%,75%);
}

.c0::placeholder {
  color: hsl(0,0%,75%);
}

<input
  className="c0"
  readOnly={false}
  tabIndex="0"
  type="text"
/>
`;

exports[`TextFieldComponent base should return a small TextFieldComponent object 1`] = `
.c0 {
  background-color: hsl(0,0%,100%);
  color: inherit;
  border: 1px solid hsl(0,0%,25%);
  border-radius: 2px;
  border-radius: 2px;
  outline: 0;
  width: 100%;
  padding: 1rem;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.8rem;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c0[disabled] {
  opacity: 0.3;
}

.c0[disabled] ~ * {
  color: rgba(0,0,0,0.3);
}

.c0:focus {
  border-color: hsl(323.3,84.6%,28%);
  box-shadow: 0 0 0 1px hsl(323.3,84.6%,28%);
}

.c0:focus + label {
  color: hsl(323.3,84.6%,28%);
}

.c0::-webkit-input-placeholder {
  color: hsl(0,0%,75%);
}

.c0::-moz-placeholder {
  color: hsl(0,0%,75%);
}

.c0:-ms-input-placeholder {
  color: hsl(0,0%,75%);
}

.c0::placeholder {
  color: hsl(0,0%,75%);
}

<input
  className="c0"
  readOnly={false}
  tabIndex="0"
  type="text"
/>
`;

exports[`TextFieldComponent with a currency attribute should return a TextFieldComponent that contains has currency style 1`] = `
.c0 {
  background-color: hsl(0,0%,100%);
  color: inherit;
  border: 1px solid hsl(0,0%,25%);
  border-radius: 4px;
  border-radius: 4px;
  outline: 0;
  width: 100%;
  padding: 1rem;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c0[disabled] {
  opacity: 0.3;
}

.c0[disabled] ~ * {
  color: rgba(0,0,0,0.3);
}

.c0:focus {
  border-color: hsl(323.3,84.6%,28%);
  box-shadow: 0 0 0 1px hsl(323.3,84.6%,28%);
}

.c0:focus + label {
  color: hsl(323.3,84.6%,28%);
}

.c0::-webkit-input-placeholder {
  color: hsl(0,0%,75%);
}

.c0::-moz-placeholder {
  color: hsl(0,0%,75%);
}

.c0:-ms-input-placeholder {
  color: hsl(0,0%,75%);
}

.c0::placeholder {
  color: hsl(0,0%,75%);
}

<input
  autoComplete="no"
  className="c0"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  readOnly={false}
  tabIndex="0"
  type="text"
  value="$"
/>
`;

exports[`TextFieldComponent with a integer attribute should return a TextFieldComponent that contains has integer style 1`] = `
.c0 {
  background-color: hsl(0,0%,100%);
  color: inherit;
  border: 1px solid hsl(0,0%,25%);
  border-radius: 4px;
  border-radius: 4px;
  outline: 0;
  width: 100%;
  padding: 1rem;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c0[disabled] {
  opacity: 0.3;
}

.c0[disabled] ~ * {
  color: rgba(0,0,0,0.3);
}

.c0:focus {
  border-color: hsl(323.3,84.6%,28%);
  box-shadow: 0 0 0 1px hsl(323.3,84.6%,28%);
}

.c0:focus + label {
  color: hsl(323.3,84.6%,28%);
}

.c0::-webkit-input-placeholder {
  color: hsl(0,0%,75%);
}

.c0::-moz-placeholder {
  color: hsl(0,0%,75%);
}

.c0:-ms-input-placeholder {
  color: hsl(0,0%,75%);
}

.c0::placeholder {
  color: hsl(0,0%,75%);
}

<input
  autoComplete="no"
  className="c0"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  readOnly={false}
  tabIndex="0"
  type="text"
  value=""
/>
`;

exports[`TextFieldComponent with a numeric attribute should return a TextFieldComponent that contains has numeric style 1`] = `
.c0 {
  background-color: hsl(0,0%,100%);
  color: inherit;
  border: 1px solid hsl(0,0%,25%);
  border-radius: 4px;
  border-radius: 4px;
  outline: 0;
  width: 100%;
  padding: 1rem;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c0[disabled] {
  opacity: 0.3;
}

.c0[disabled] ~ * {
  color: rgba(0,0,0,0.3);
}

.c0:focus {
  border-color: hsl(323.3,84.6%,28%);
  box-shadow: 0 0 0 1px hsl(323.3,84.6%,28%);
}

.c0:focus + label {
  color: hsl(323.3,84.6%,28%);
}

.c0::-webkit-input-placeholder {
  color: hsl(0,0%,75%);
}

.c0::-moz-placeholder {
  color: hsl(0,0%,75%);
}

.c0:-ms-input-placeholder {
  color: hsl(0,0%,75%);
}

.c0::placeholder {
  color: hsl(0,0%,75%);
}

<input
  autoComplete="no"
  className="c0"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  readOnly={false}
  tabIndex="0"
  type="text"
  value=""
/>
`;

exports[`TextFieldComponent with a password attribute should return a TextFieldComponent of input type password 1`] = `
.c0 {
  background-color: hsl(0,0%,100%);
  color: inherit;
  border: 1px solid hsl(0,0%,25%);
  border-radius: 4px;
  border-radius: 4px;
  outline: 0;
  width: 100%;
  padding: 1rem;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c0[disabled] {
  opacity: 0.3;
}

.c0[disabled] ~ * {
  color: rgba(0,0,0,0.3);
}

.c0:focus {
  border-color: hsl(323.3,84.6%,28%);
  box-shadow: 0 0 0 1px hsl(323.3,84.6%,28%);
}

.c0:focus + label {
  color: hsl(323.3,84.6%,28%);
}

.c0::-webkit-input-placeholder {
  color: hsl(0,0%,75%);
}

.c0::-moz-placeholder {
  color: hsl(0,0%,75%);
}

.c0:-ms-input-placeholder {
  color: hsl(0,0%,75%);
}

.c0::placeholder {
  color: hsl(0,0%,75%);
}

<input
  className="c0"
  readOnly={false}
  tabIndex="0"
  type="password"
/>
`;

exports[`TextFieldComponent with a phone attribute should return a TextFieldComponent that contains has phone style 1`] = `
.c0 {
  background-color: hsl(0,0%,100%);
  color: inherit;
  border: 1px solid hsl(0,0%,25%);
  border-radius: 4px;
  border-radius: 4px;
  outline: 0;
  width: 100%;
  padding: 1rem;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c0[disabled] {
  opacity: 0.3;
}

.c0[disabled] ~ * {
  color: rgba(0,0,0,0.3);
}

.c0:focus {
  border-color: hsl(323.3,84.6%,28%);
  box-shadow: 0 0 0 1px hsl(323.3,84.6%,28%);
}

.c0:focus + label {
  color: hsl(323.3,84.6%,28%);
}

.c0::-webkit-input-placeholder {
  color: hsl(0,0%,75%);
}

.c0::-moz-placeholder {
  color: hsl(0,0%,75%);
}

.c0:-ms-input-placeholder {
  color: hsl(0,0%,75%);
}

.c0::placeholder {
  color: hsl(0,0%,75%);
}

<input
  autoComplete="no"
  className="c0"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  readOnly={false}
  tabIndex="0"
  type="text"
  value=""
/>
`;

exports[`TextFieldComponent with a postalCode attribute should return a TextFieldComponent that contains has postalCode style 1`] = `
.c0 {
  background-color: hsl(0,0%,100%);
  color: inherit;
  border: 1px solid hsl(0,0%,25%);
  border-radius: 4px;
  border-radius: 4px;
  outline: 0;
  width: 100%;
  padding: 1rem;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c0[disabled] {
  opacity: 0.3;
}

.c0[disabled] ~ * {
  color: rgba(0,0,0,0.3);
}

.c0:focus {
  border-color: hsl(323.3,84.6%,28%);
  box-shadow: 0 0 0 1px hsl(323.3,84.6%,28%);
}

.c0:focus + label {
  color: hsl(323.3,84.6%,28%);
}

.c0::-webkit-input-placeholder {
  color: hsl(0,0%,75%);
}

.c0::-moz-placeholder {
  color: hsl(0,0%,75%);
}

.c0:-ms-input-placeholder {
  color: hsl(0,0%,75%);
}

.c0::placeholder {
  color: hsl(0,0%,75%);
}

<input
  autoComplete="no"
  className="c0"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  readOnly={false}
  tabIndex="0"
  type="text"
  value=""
/>
`;

exports[`TextFieldComponent with an email attribute should return a TextFieldComponent of input type email 1`] = `
.c0 {
  background-color: hsl(0,0%,100%);
  color: inherit;
  border: 1px solid hsl(0,0%,25%);
  border-radius: 4px;
  border-radius: 4px;
  outline: 0;
  width: 100%;
  padding: 1rem;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c0[disabled] {
  opacity: 0.3;
}

.c0[disabled] ~ * {
  color: rgba(0,0,0,0.3);
}

.c0:focus {
  border-color: hsl(323.3,84.6%,28%);
  box-shadow: 0 0 0 1px hsl(323.3,84.6%,28%);
}

.c0:focus + label {
  color: hsl(323.3,84.6%,28%);
}

.c0::-webkit-input-placeholder {
  color: hsl(0,0%,75%);
}

.c0::-moz-placeholder {
  color: hsl(0,0%,75%);
}

.c0:-ms-input-placeholder {
  color: hsl(0,0%,75%);
}

.c0::placeholder {
  color: hsl(0,0%,75%);
}

<input
  className="c0"
  readOnly={false}
  tabIndex="0"
  type="email"
/>
`;
